[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peasy-audio"
version = "0.2.0"
description = "Audio processing made easy — convert, trim, merge, normalize, and analyze audio files with pydub."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Peasy Tools" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
keywords = ["audio", "sound", "convert", "trim", "merge", "normalize", "pydub", "ffmpeg", "peasy"]
dependencies = ["pydub>=0.25", "audioop-lts>=0.2.1; python_version >= '3.13'"]

[project.optional-dependencies]
cli = ["typer>=0.9"]
dev = ["mypy>=1.10", "pytest>=8.0", "ruff>=0.4"]

[project.scripts]
peasy-audio = "peasy_audio.cli:app"

[project.urls]
Homepage = "https://peasytools.com"
Repository = "https://github.com/peasytools/peasy-audio"
Issues = "https://github.com/peasytools/peasy-audio/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/peasy_audio"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["pydub", "pydub.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
